# torrus-newfeatures

./: .gitignore  CiscoIOS_cbQoS.207_patched  Cisco_cbQoS.207_patched_2  README  RFC2863_IF_MIB.207_patch
plugins/cbqos/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  cisco-cbqos-ddcfg.pl  cisco-cbqos-torruscfg.pl  cisco.ios.cbqos.xml  configure.ac  tp-cisco-cbqos.pod
plugins/cbqos/Collector/: Cisco_cbQoS.pm  Cisco_cbQoS_Params.pm
plugins/cbqos/DevDiscover/: CiscoIOS_cbQoS.pm
plugins/dummy/: .cvsignore  AUTHORS  ChangeLog  DummyModule.pm  Makefile.am  NEWS  configure.ac  dummy-ddcfg.pl  dummy-torruscfg.pl  dummy-wrapper.sh  dummy.xml  dummydoc.txt  dummyscript.in  dummytemplate.html  substvars.sh.in  tp-dummy.pod
plugins/easytarget/: .cvsignore  AUTHORS  ChangeLog  EasyTarget.pm  Makefile.am  NEWS  configure.ac  easytarget-config.pl  easytarget-siteconfig.pl  easytarget-wrapper.sh  easytarget.in  substvars.sh.in  tp-easytarget.pod.in
plugins/httpcollector/: .cvsignore  AUTHORS  ChangeLog  Http.pm  Makefile.am  NEWS  README  apache.httpd.xml  configure.ac  httpcollector-torruscfg.pl  httpcollector.pod  httpcollector.txt  localhost-apache1.xml  localhost-apache2.xml  tp-httpcollector.pod
plugins/m-net/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac  m-net-ddcfg.pl  m-net-monitors.xml  tp-m-net.pod
plugins/m-net/DevDiscover/: M_net.pm
plugins/overview/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  apache2.conf.in  configure.ac  ovDefaults.xml  ovExample.xml  ov_substvars.sh.in  overview-torruscfg.pl  tp-overview.apache.conf.in  tp-overview.pod
plugins/overview/css/: ov-mozilla.css  ov-printer.css  ov.css  overview.css
plugins/overview/menu/: .cvsignore  credits.htm  menu.css  menu.js  menu.xsl.in  sampleMenu.xml  welcome.htm
plugins/overview/overview/: .cvsignore  common.inc  overview.xsl.in  sampleOverview.xml
plugins/overview/templates/: default-chooser.html  default-dir.html  default-recursivedir.html  default-tset.html  expanded-dir.html  html-incblocks.txt  item-rrd.html  ov-chooser.html  ov-dir.html  ov-expanded-dir.html  ov-html-incblocks.txt  ov-inout-leaves.html  ov-tset-list.html  ov-tset.html  overview-subleaves.html  sub-nodes-dir.html  tab-rrd.html  tset-list.html
plugins/overview/xtree/: .cvsignore  xtree.css  xtree.js.in
plugins/randomcollector/: .cvsignore  ChangeLog  Makefile.am  README  Random.pm  configure.ac  genrandomcfg.in  genrandomcfg.xml  random.xml  randomcollector-torruscfg.pl  randomcollector-wrapper.sh  randomcollector.pod  randomcollector.txt  substvars.sh  substvars.sh.in  tp-randomcollector.pod
plugins/rawexport/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  RawExport.pm  RawExport_Params.pm  configure.ac  rawexport-example.xml  rawexport-torruscfg.pl  tp-rawexport.pod
plugins/rrdfit/: ChangeLog  Makefile.am  NEWS  README  configure.ac  rrdfit-wrapper.sh  rrdfit.in  substvars.sh.in  tp-rrdfit.pod.in
plugins/siam/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  SIAM.pm  SIAMDD.pm  SIAMLogger.pm  configure.ac  siam-config.pl  siam-ddconfig.pl  siam-siteconfig.pl  siam-wrapper.sh  siam.in  siam_genddx.in  siam_genxml.in  siam_rebuild.in  siam_rrdfetch.in  substvars.sh.in  tp-siam.pod.in
plugins/siam/SIAMDD/: APC_PowerNet.pm  IFMIB.pm
src/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  TODO  configure.ac  critic.profile
src/configs/: .cvsignore  Makefile  Makefile.am  Makefile.in  devdiscover-config.pl  initscript.conf  torrus-config.pl  torrus-siteconfig.pl  webmux.pl  webmux2.pl
src/doc/: .cvsignore  ABOUT  Makefile.am  commandref.txt  extstorage.pod.in  headers  install.pod  install.pod.in  install.txt  mkhtdocs.sh  nodeid_usage.pod.in  reporting_setup.pod.in  rpnexpr.pod  rpnexpr.pod.in  rpnexpr.txt  rrfw_torrus_migration.pod  rrfw_torrus_migration.pod.in  scalability.pod  scalability.pod.in  scalability.txt  snmpdiscovery.pod  snmpdiscovery.pod.in  snmpdiscovery.txt  stylingprofile.pod  stylingprofile.pod.in  stylingprofile.txt  torrus.wml  torrus_rrdworld.xml  userguide.pod  userguide.pod.in  userguide.txt  vendorsupport.pod  vendorsupport.pod.in  vendorsupport.txt  webintf.pod  webintf.pod.in  webintf.txt  xmlconfig.pod  xmlconfig.pod.in  xmlconfig.txt
src/doc/devdoc/: architecture.pod  devdiscover.pod  progstyle.pod  reqs.0.0.pod  reqs.0.1.pod  torrus_roadmap.pod  v3_changes  v3_cpanm  wd.distributed.pod  wd.docsis-cm-monitoring.pod  wd.launcher.pod  wd.messaging.pod  wd.monitor-escalation.pod  wd.reports-generator.pod  wd.uptime-mon.pod
src/doc/manpages/: .cvsignore  Makefile.am  torrus.pod.in  torrus_acledit.pod.in  torrus_action_notify.pod.in  torrus_action_printemail.pod.in  torrus_action_snmptrap.pod.in  torrus_buildsearchdb.pod.in  torrus_cleanup.pod.in  torrus_clearcache.pod.in  torrus_collector.pod.in  torrus_compilexml.pod.in  torrus_configinfo.pod.in  torrus_configsnapshot.pod.in  torrus_genddx.pod.in  (+13 more)
src/examples/: Makefile.am  onms.tmpl  onmsInterfaces.sh  setmonitor.xupdate.xml  torrus-siteconfig.powerbook.pl
src/init.d/: .cvsignore  torrus  torrus.in
src/lib/: Makefile.am
src/perllib/: Makefile.am
src/scripts/: rrdup_notify.sh
src/setup_tools/: .cvsignore  check_perlthreading.pl  configure_fhs  cpanm_install_modules.sh  mkvardir.sh.in  normalize-all-sources.pl  substvars.sh.in
src/sup/: Makefile.am
src/systemd/: torrus.service.in  torrus.tmpfile.in
src/t/: .perlcriticrc  000-sanity.t  010-pod.t  011-pod-spelling.t  012-pod-coverage.t  020-version.t  9999-perlcritic.t
src/templates/: default-chooser.html  default-dir.html  default-helptext.html  default-login.html  default-recursivedir.html  default-rrd.html  default-tset.html  email-alarm.txt  expanded-dir.html  globalsearch.html  html-incblocks.txt  iframe-rrd.html  interactive.html  overview-subleaves.html  report-index.html  report-monthly.html  report-serviceid.html  report-yearly.html  search.html  tset-list.html
src/xmlconfig/: Makefile.am  cdef-collector-defs.xml  default-root.xml  defaults.xml  site-global.xml  snmp-defs.xml
(+334 files in other folders)
